added mixins, atoms and commented out previous code

--- a/_variables.scss
+++ b/_variables.scss
@@ -1,9 +1,14 @@
-$fonts-headline: "arial narrow", Arial, Verdana, sans-serif;
-$fonts-body: verdana, arial, sans-serif;
-$background-color: #daede2;
-$primary: #77c4d3;
-$accent1: #ea2e49;
-$accent2: rgba(246, 247, 146, 0.9);
-$grey-sidebar: rgba(51, 55, 69, 0.9);
+@import url("https://fonts.googleapis.com/css?family=Creepster");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+$fonts-headline: "Creepster";
+$fonts-body: "Special Elite";
+$background-color: #151818;
+$primary: #313131;
+$accent1: #8e4e06;
+$accent2: #6E3A9E;
+$grey-sidebar: rgba(51,
+55,
+69,
+0.9);
 $text-dark: #333;
 $text-light: #fff;
