--- a/style.css
+++ b/style.css
@@ -1,21 +1,17 @@
-@use 'variables' as *;
-// mixins to take care of repeated patterns.
-@mixin set-font($font, $text-color: $text-light) {
-    font-family: $font;
-    color: $text-color;
-}
-
+@import url("https://fonts.googleapis.com/css?family=Creepster");
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 h1,
 h2,
 h3,
 h4 {
-    @include set-font($fonts-headline);
+  font-family: "Creepster";
+  color: #fff;
 }
 
 p {
-    @include set-font($fonts-body)
+  font-family: "Special Elite";
+  color: #fff;
 }
-
 
 /*
 @mixin set-font($size: 1em, $line-height: normal, $font: $fonts-body) {
@@ -58,8 +54,6 @@ h1 {
 h2 {
   color: $text-light;
   font-weight: 900; /* Heavy */
-
-
 /*
 font-size: 6em;
 letter-spacing: 1px;
@@ -69,7 +63,7 @@ line-height: 1em;
 h3 {
     font-size: 2.25em;
     font-weight: 200;
-    
+
     letter-spacing: 1px;
     line-height: 1em;
     padding: 0.5em 0 0.25em 0;
@@ -77,7 +71,7 @@ h3 {
 h4 {
     font-size: 1.5em;
     font-weight: 200;
-    
+
     letter-spacing: 1px;
     line-height: 1em;
     margin: 0.5em 0;
@@ -97,3 +91,47 @@ a:hover {
     border-color: $accent1;
 }
 */
+/*[role="banner"] {
+  > h1 {
+    // notice we have to reference the 'atoms' namespace to find our mixins.
+    @include atoms.uppercase($text-light);
+  }
+}
+.summary {
+  @include atoms.uppercase($text-light);
+  padding: 15% 0;
+  p:last-child {
+    @include atoms.divider;
+  }
+  a {
+    color: $text-light; //in this case the link wants to be light instead of the default dark
+  }
+}
+.preamble {
+  background: rgba(255, 255, 255, 0.9);
+  color: $text-dark;
+  margin-left: -30%;
+  padding: 5% 5% 5% 30%;
+}*/
+/*.intro {
+  padding: 5%;
+}*/
+* {
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #151818;
+  padding: 5%;
+}
+
+body {
+  font-family: "Special Elite";
+  font-size: 85%;
+  color: #333;
+  background-color: #313131;
+  margin: 0;
+  padding: 1em;
+}
+
+/*# sourceMappingURL=style.css.map */
