--- a/_variables.scss
+++ b/_variables.scss
@@ -2,9 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 $fonts-headline: "Creepster";
 $fonts-body: "Special Elite";
+$size: 2em;
 $background-color: #151818;
 $primary: #313131;
-$accent1: #8e4e06;
+$accent1: #cd8c42;
 $accent2: #6E3A9E;
 $grey-sidebar: rgba(51,
 55,
