--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 h1 {
   font-family: "Creepster";
-  color: #cd8c42;
+  color: #6E3A9E;
   font-size: 2em;
   text-align: center;
 }
