--- a/_molecules.scss
+++ b/_molecules.scss
@@ -2,6 +2,10 @@
 @use 'atoms';
 // use the mixins from the atoms module to compose our molecules. If you prefer the terminology 'blocks' and 'elements' feel free to use it instead!
 //The base styling we made on our atoms (elements) does most of the work...here we would make any modifications on the elements if they need to appear differently in a certain molecule (block)
+div.page-wrapper div {
+    background: rgba(128, 128, 128, 0.5)
+}
+
 
 /*[role="banner"] {
   > h1 {
