--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Creepster");
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+html {
+  padding: 0%;
+}
+
 h1 {
   font-family: "Creepster";
   color: #6E3A9E;
@@ -27,8 +31,96 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  animation: thunderHit;
+  animation-duration: 0.4s;
+  animation-iteration-count: 2;
+  animation-delay: 0.8s;
 }
 
+.page-wrapper {
+  background-image: url(https://i.postimg.cc/XvR6CjbY/rain.png);
+  animation: rain 0.3s linear infinite;
+}
+
+@keyframes rain {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 20% 100%;
+  }
+}
+.page-wrapper::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(https://i.postimg.cc/xCLDGwfy/lightining.png);
+  top: -100px;
+  transform: rotate(180deg);
+  animation: lightining 4s linear infinite;
+  opacity: 1;
+}
+
+@keyframes lightining {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  21% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  31% {
+    opacity: 1;
+  }
+  35% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes thunderHit {
+  0% {
+    background: white;
+    background-position: center;
+    opacity: 1;
+  }
+  25% {
+    background: url("images/kraken.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  50% {
+    background: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+  }
+  75% {
+    background: url("images/kraken.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  100% {
+    background: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+  }
+}
 /*
 @mixin set-font($size: 1em, $line-height: normal, $font: $fonts-body) {
   font-family: $font;
@@ -136,76 +228,22 @@ div.page-wrapper div {
 /*.intro {
   padding: 5%;
 }*/
-/** {
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 html {
-    background-color: $background-color;
-    padding: 5%;
+  background-color: #151818;
+  padding: 0%;
 }
 
 body {
-    font-family: $fonts-body;
-    font-size: 85%;
-    color: $text-dark;
-    background-color: $primary;
-    margin: 0;
-    padding: 1em;
+  font-family: "Special Elite";
+  font-size: 85%;
+  color: #333;
+  background-color: #313131;
+  margin: 0;
+  padding: 1em;
 }
-
-section {
-    background-color: white;
-    padding: 1em;
-    margin: 1em;
-}
-
-.colors {
-    @include atoms.set-flex();
-    >h3 {
-        width: 100%;
-        flex: 1 0 100%;
-    }
-    >figure {
-        margin: 0;
-        flex: 1 1 25%;
-    }
-}
-
-.swatch {
-    width: 100%;
-    height: 100px;
-    border: 1px solid;
-}
-
-.primary {
-    background-color: $primary;
-}
-
-.accent1 {
-    background-color: $accent1;
-}
-
-.accent2 {
-    background-color: $accent2;
-}
-
-.text-dark {
-    background-color: $text-dark;
-}
-
-.element {
-    border: 1px solid;
-    margin: 0.5em;
-    padding: 1em;
-}
-
-.uppercase {
-    @include atoms.uppercase;
-}
-
-.uppercase-light {
-    @include atoms.uppercase($text-light);
-}*/
 
 /*# sourceMappingURL=style.css.map */
