--- a/_variables.scss
+++ b/_variables.scss
@@ -5,8 +5,22 @@ $fonts-body: "Special Elite";
 $size: 2em;
 $background-color: #151818;
 $primary: #313131;
-$accent1: #cd8c42;
+$accent1: rgb(25,
+138,
+131);
+$accent2: rgb(251,
+152,
+1);
+$accent3: rgb(138,
+100,
+121);
+
+/*$accent1: #cd8c42;
 $accent2: #6E3A9E;
+rgb(138,
+100,
+121);*/
+
 $grey-sidebar: rgba(51,
 55,
 69,
