--- a/_atoms.scss
+++ b/_atoms.scss
@@ -10,11 +10,6 @@ html {
     padding: 0%;
 }
 
-h1 {
-    @include set-font($fonts-headline, 3em, $accent2);
-    text-align: center;
-}
-
 h2,
 h3,
 h4 {
@@ -131,13 +126,15 @@ body {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 33.3% 66.3%;
+    grid-row: 1;
+    grid-column: 1 /span 2;
 }
 
 header {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 50% 50%;
-    grid-column: 1;
+    grid-column: 1 2;
     grid-row: 1 2;
 }
 
@@ -165,41 +162,42 @@ h2 {
     grid-row: 2;
 }
 
-.intro {
+.page-wrapper {
     display: grid;
     grid-gap: 10px;
+    grid-template-rows: 50% 50%;
     grid-template-columns: 33.3% 66.3%;
 }
 
-header {
+.main {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.sidebar {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.wrapper {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+}
+
+.design-selection {
     grid-column: 1;
-    grid-row: 1 2;
-}
-
-h1 {
-    @include set-font($fonts-headline,
-    3em,
-    $accent2);
-    grid-column: 1;
-}
-
-h2 {
-    @include set-font($fonts-headline,
-    $size,
-    $accent3);
-    grid-column: 2;
-}
-
-.summary {
-    grid-column: 2;
     grid-row: 1;
 }
 
-.preamble {
+.design-archives {
     grid-column: 2;
+    grid-row: 1
+}
+
+.design-archives {
+    grid-column: 1/span 2;
     grid-row: 2;
 }
 
