--- a/style.css
+++ b/style.css
@@ -1,42 +1,205 @@
 @import url("https://fonts.googleapis.com/css?family=Creepster");
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
+/*$accent1: #cd8c42;
+$accent2: #6E3A9E;
+rgb(138,
+100,
+121);*/
 html {
-    padding: 0%;
-}
-
-h1 {
-    font-family: "Creepster";
-    color: #6E3A9E;
-    font-size: 3em;
-    text-align: center;
+  padding: 0%;
 }
 
 h2,
 h3,
 h4 {
-    font-family: "Creepster";
-    color: rgb(25, 138, 131);
-    font-size: 2em;
+  font-family: "Creepster";
+  color: rgb(25, 138, 131);
+  font-size: 2em;
 }
 
 p {
-    font-family: "Special Elite";
-    color: #fff;
-    font-size: 1em;
+  font-family: "Special Elite";
+  color: #fff;
+  font-size: 1em;
 }
 
 body {
-    height: 25%;
-    background-image: url("images/kraken.jpeg");
+  height: 100vh;
+  /* The image used */
+  background-image: url("./images/kraken.jpeg");
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: thunderHit;
+  animation-duration: 0.4s;
+  animation-iteration-count: 2;
+  animation-delay: 0.8s;
+}
+
+.page-wrapper {
+  background-image: url(https://i.postimg.cc/XvR6CjbY/rain.png);
+  animation: rain 0.3s linear infinite;
+}
+
+@keyframes rain {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 20% 100%;
+  }
+}
+.page-wrapper::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url(https://i.postimg.cc/xCLDGwfy/lightining.png);
+  top: -100px;
+  transform: rotate(180deg);
+  animation: lightining 4s linear infinite;
+  opacity: 1;
+}
+
+@keyframes lightining {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 0;
+  }
+  21% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 0;
+  }
+  31% {
+    opacity: 1;
+  }
+  35% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes thunderHit {
+  0% {
+    background: white;
+    background-position: center;
+    opacity: 1;
+  }
+  25% {
+    background: url("images/kraken.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    animation: thunderHit;
-    animation-duration: 0.4s;
-    animation-iteration-count: 2;
-    animation-delay: 0.8s;
+  }
+  50% {
+    background: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+  }
+  75% {
+    background: url("images/kraken.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  100% {
+    background: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1;
+  }
+}
+.intro {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 33.3% 66.3%;
+  grid-row: 1;
+  grid-column: 1/span 2;
 }
 
+header {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 50% 50%;
+  grid-column: 1 2;
+  grid-row: 1 2;
+}
+
+h1 {
+  font-family: "Creepster";
+  color: rgb(251, 152, 1);
+  font-size: 3em;
+  grid-column: 1;
+}
+
+h2 {
+  font-family: "Creepster";
+  color: rgb(138, 100, 121);
+  font-size: 2em;
+  grid-column: 2;
+}
+
+.summary {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.preamble {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.page-wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-rows: 50% 50%;
+  grid-template-columns: 33.3% 66.3%;
+}
+
+.main {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.sidebar {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+}
+
+.design-selection {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.design-archives {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.design-archives {
+  grid-column: 1/span 2;
+  grid-row: 2;
+}
 
 /*
 @mixin set-font($size: 1em, $line-height: normal, $font: $fonts-body) {
@@ -79,8 +242,6 @@ h1 {
 h2 {
   color: $text-light;
   font-weight: 900; /* Heavy */
-
-
 /*
 font-size: 6em;
 letter-spacing: 1px;
@@ -118,11 +279,9 @@ a:hover {
     border-color: $accent1;
 }
 */
-
 div.page-wrapper div {
-    background: rgba(128, 128, 128, 0.5);
+  background: rgba(128, 128, 128, 0.5);
 }
-
 
 /*[role="banner"] {
   > h1 {
@@ -146,29 +305,79 @@ div.page-wrapper div {
   margin-left: -30%;
   padding: 5% 5% 5% 30%;
 }*/
-
-
 /*.intro {
   padding: 5%;
 }*/
-
-* {
+/** {
     box-sizing: border-box;
 }
 
 html {
-    background-color: #151818;
-    padding: 0%;
+    background-color: $background-color;
+    padding: 5%;
 }
 
 body {
-    font-family: "Special Elite";
+    font-family: $fonts-body;
     font-size: 85%;
-    color: #333;
-    background-color: #313131;
+    color: $text-dark;
+    background-color: $primary;
     margin: 0;
     padding: 1em;
 }
 
+section {
+    background-color: white;
+    padding: 1em;
+    margin: 1em;
+}
+
+.colors {
+    @include atoms.set-flex();
+    >h3 {
+        width: 100%;
+        flex: 1 0 100%;
+    }
+    >figure {
+        margin: 0;
+        flex: 1 1 25%;
+    }
+}
+
+.swatch {
+    width: 100%;
+    height: 100px;
+    border: 1px solid;
+}
+
+.primary {
+    background-color: $primary;
+}
+
+.accent1 {
+    background-color: $accent1;
+}
+
+.accent2 {
+    background-color: $accent2;
+}
+
+.text-dark {
+    background-color: $text-dark;
+}
+
+.element {
+    border: 1px solid;
+    margin: 0.5em;
+    padding: 1em;
+}
+
+.uppercase {
+    @include atoms.uppercase;
+}
+
+.uppercase-light {
+    @include atoms.uppercase($text-light);
+}*/
 
 /*# sourceMappingURL=style.css.map */
