--- a/_atoms.scss
+++ b/_atoms.scss
@@ -122,82 +122,92 @@ body {
     }
 }
 
+
+/*Main wrapper*/
+
+.page-wrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+
+/*Intro*/
+
 .intro {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 33.3% 66.3%;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-rows: repeat(2, minmax(0, .33fr));
     grid-row: 1;
-    grid-column: 1 /span 2;
+    grid-column: 1 / 13;
 }
 
 header {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 50% 50%;
-    grid-column: 1 2;
-    grid-row: 1 2;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-column: 1/4;
+    grid-row: 1;
 }
 
 h1 {
     @include set-font($fonts-headline,
     3em,
     $accent2);
-    grid-column: 1;
+    grid-column: 1/6;
 }
 
 h2 {
     @include set-font($fonts-headline,
     $size,
     $accent3);
-    grid-column: 2;
+    grid-column: 6/13;
 }
 
 .summary {
-    grid-column: 2;
+    grid-column: 4/13;
     grid-row: 1;
 }
 
 .preamble {
-    grid-column: 2;
+    grid-column: 4/13;
     grid-row: 2;
 }
 
-.page-wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 33.3% 66.3%;
-}
+
+/*Main*/
 
 .main {
-    grid-column: 2;
-    grid-row: 2;
+    grid-column: 4/13;
+    grid-row: 3;
 }
 
 .sidebar {
-    grid-column: 1;
-    grid-row: 2;
+    grid-column: 1/4;
+    grid-row: 3;
 }
 
 .wrapper {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    grid-template-rows: repeat(2, auto);
 }
 
 .design-selection {
-    grid-column: 1;
+    grid-column: 1/6;
+    grid-row: 1;
+}
+
+.zen-resources {
+    grid-column: 6/13;
     grid-row: 1;
 }
 
 .design-archives {
-    grid-column: 2;
-    grid-row: 1
-}
-
-.design-archives {
-    grid-column: 1/span 2;
+    grid-column: 1/13;
     grid-row: 2;
 }
 
