--- a/style.css
+++ b/style.css
@@ -122,82 +122,86 @@ body {
     opacity: 1;
   }
 }
+/*Main wrapper*/
+.page-wrapper {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+/*Intro*/
 .intro {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 33.3% 66.3%;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(2, minmax(0, 0.33fr));
   grid-row: 1;
-  grid-column: 1/span 2;
+  grid-column: 1/13;
 }
 
 header {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 50% 50%;
-  grid-column: 1 2;
-  grid-row: 1 2;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-column: 1/4;
+  grid-row: 1;
 }
 
 h1 {
   font-family: "Creepster";
   color: rgb(251, 152, 1);
   font-size: 3em;
-  grid-column: 1;
+  grid-column: 1/6;
 }
 
 h2 {
   font-family: "Creepster";
   color: rgb(138, 100, 121);
   font-size: 2em;
-  grid-column: 2;
+  grid-column: 6/13;
 }
 
 .summary {
-  grid-column: 2;
+  grid-column: 4/13;
   grid-row: 1;
 }
 
 .preamble {
-  grid-column: 2;
+  grid-column: 4/13;
   grid-row: 2;
 }
 
-.page-wrapper {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-rows: 50% 50%;
-  grid-template-columns: 33.3% 66.3%;
-}
-
+/*Main*/
 .main {
-  grid-column: 2;
-  grid-row: 2;
+  grid-column: 4/13;
+  grid-row: 3;
 }
 
 .sidebar {
-  grid-column: 1;
-  grid-row: 2;
+  grid-column: 1/4;
+  grid-row: 3;
 }
 
 .wrapper {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+  grid-template-rows: repeat(2, auto);
 }
 
 .design-selection {
-  grid-column: 1;
+  grid-column: 1/6;
+  grid-row: 1;
+}
+
+.zen-resources {
+  grid-column: 6/13;
   grid-row: 1;
 }
 
 .design-archives {
-  grid-column: 2;
-  grid-row: 1;
-}
-
-.design-archives {
-  grid-column: 1/span 2;
+  grid-column: 1/13;
   grid-row: 2;
 }
 
@@ -279,8 +283,10 @@ a:hover {
     border-color: $accent1;
 }
 */
-div.page-wrapper div {
-  background: rgba(128, 128, 128, 0.5);
+.page-wrapper > section > div,
+.page-wrapper > div > div,
+aside > div > div {
+  background: rgba(128, 128, 128, 0.9);
 }
 
 /*[role="banner"] {
