--- a/style.css
+++ b/style.css
@@ -311,79 +311,72 @@ aside > div > div {
   margin-left: -30%;
   padding: 5% 5% 5% 30%;
 }*/
+@media screen and (max-width: 700px) {
+  .page-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+  }
+  .main {
+    grid-column: 2/5;
+    grid-row: unset;
+  }
+  .intro {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: unset;
+    grid-template-rows: 300px auto auto auto;
+    grid-row: unset;
+    grid-column: 1/2;
+  }
+  header {
+    display: unset;
+    grid-gap: unset;
+    grid-template-columns: unset;
+    grid-column: unset;
+    grid-row: 1;
+  }
+  .sidebar {
+    display: unset;
+    grid-row: unset;
+    grid-column: 1/5;
+    grid-template-columns: unset;
+    object-fit: fill;
+  }
+  .wrapper {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: unset;
+  }
+  .summary {
+    grid-column: unset;
+    grid-row: unset;
+  }
+  .preamble {
+    grid-column: unset;
+    grid-row: 3/5;
+  }
+}
 /*.intro {
   padding: 5%;
 }*/
-/** {
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 html {
-    background-color: $background-color;
-    padding: 5%;
+  background-color: #151818;
+  padding: 0%;
 }
 
 body {
-    font-family: $fonts-body;
-    font-size: 85%;
-    color: $text-dark;
-    background-color: $primary;
-    margin: 0;
-    padding: 1em;
+  font-family: "Special Elite";
+  font-size: 85%;
+  color: #333;
+  background-color: #313131;
+  margin: 0;
+  padding: 1em;
 }
-
-section {
-    background-color: white;
-    padding: 1em;
-    margin: 1em;
-}
-
-.colors {
-    @include atoms.set-flex();
-    >h3 {
-        width: 100%;
-        flex: 1 0 100%;
-    }
-    >figure {
-        margin: 0;
-        flex: 1 1 25%;
-    }
-}
-
-.swatch {
-    width: 100%;
-    height: 100px;
-    border: 1px solid;
-}
-
-.primary {
-    background-color: $primary;
-}
-
-.accent1 {
-    background-color: $accent1;
-}
-
-.accent2 {
-    background-color: $accent2;
-}
-
-.text-dark {
-    background-color: $text-dark;
-}
-
-.element {
-    border: 1px solid;
-    margin: 0.5em;
-    padding: 1em;
-}
-
-.uppercase {
-    @include atoms.uppercase;
-}
-
-.uppercase-light {
-    @include atoms.uppercase($text-light);
-}*/
 
 /*# sourceMappingURL=style.css.map */
