fixing large layout image

--- a/_variables.scss
+++ b/_variables.scss
@@ -5,9 +5,9 @@ $fonts-body: "Special Elite";
 $size: 2em;
 $background-color: #151818;
 $primary: #313131;
-$accent1: rgb(25,
-138,
-131);
+$accent1: rgb(30,
+33,
+32);
 $accent2: rgb(251,
 152,
 1);
@@ -27,4 +27,7 @@ $grey-sidebar: rgba(51,
 0.9);
 $text-dark: #333;
 $text-light: #fff;
+$link-hover: rgb(54,
+143,
+130);
 $background-image: "images/kraken.jpeg";
