--- a/_atoms.scss
+++ b/_atoms.scss
@@ -6,6 +6,25 @@
     font-size: $size;
 }
 
+ul {
+    list-style: none;
+    display: inline-block;
+    text-align: center;
+}
+
+nav {
+    text-align: center;
+}
+
+a {
+    color: $text-dark;
+    text-decoration: none;
+}
+
+a:hover {
+    color: $link-hover;
+}
+
 html {
     padding: 0%;
 }
@@ -21,14 +40,12 @@ p {
 }
 
 body {
-    height: 100vh;
     /* The image used */
-    background-image: url("./images/kraken.jpeg");
-    /* Create the parallax scrolling effect */
+    background-image: url('./images/kraken.jpeg');
     background-attachment: fixed;
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 75%;
     animation: thunderHit;
     animation-duration: 0.4s;
     animation-iteration-count: 2;
@@ -129,7 +146,7 @@ body {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
-    grid-template-rows: repeat(3, minmax(0, 1fr));
+    grid-template-rows: 100vh 50vh;
 }
 
 
@@ -137,72 +154,77 @@ body {
 
 .intro {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
-    grid-template-rows: repeat(2, minmax(0, 350px));
+    grid-template-rows: 29% 30.5% 40.5%;
     grid-row: 1;
-    grid-column: 1 / 13;
+    grid-column: 3 / 11;
 }
 
 header {
     display: grid;
-    grid-gap: 10px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
-    grid-column: 1/4;
+    grid-column: 1/13;
     grid-row: 1;
+    margin: auto;
+    width: 100%;
 }
 
 h1 {
     @include set-font($fonts-headline,
     3em,
     $accent2);
-    grid-column: 1/6;
+    grid-column: 2/6;
 }
 
 h2 {
     @include set-font($fonts-headline,
     $size,
     $accent3);
-    grid-column: 6/13;
+    grid-column: 10/13;
+}
+
+h3 {
+    margin: 0px;
 }
 
 .summary {
-    grid-column: 4/13;
-    grid-row: 1;
+    grid-column: 1/4;
+    grid-row: 3;
 }
 
 .preamble {
     grid-column: 4/13;
-    grid-row: 2;
+    grid-row: 3;
 }
 
 
 /*Main*/
 
 .main {
-    grid-column: 4/13;
+    grid-column: 6/11;
     grid-row: 3;
 }
 
 .sidebar {
-    grid-column: 1/4;
+    grid-column: 3/6;
     grid-row: 3;
 }
 
 .wrapper {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
     grid-template-rows: repeat(2, minmax(0, auto));
 }
 
 .design-selection {
-    grid-column: 1/6;
+    grid-column: 1/7;
     grid-row: 1;
 }
 
 .zen-resources {
-    grid-column: 6/13;
+    grid-column: 7/13;
     grid-row: 1;
 }
 
