--- a/_molecules.scss
+++ b/_molecules.scss
@@ -4,8 +4,10 @@
 //The base styling we made on our atoms (elements) does most of the work...here we would make any modifications on the elements if they need to appear differently in a certain molecule (block)
 .page-wrapper>section>div,
 .page-wrapper>div>div,
-aside>div>div {
-    background: rgba(128, 128, 128, 0.9)
+aside>div>div,
+footer {
+    background: rgba(128, 128, 128, 0.9);
+    border-radius: 15px;
 }
 
 
