--- a/_molecules.scss
+++ b/_molecules.scss
@@ -8,6 +8,8 @@ aside>div>div,
 footer {
     background: rgba(128, 128, 128, 0.9);
     border-radius: 15px;
+    padding: 8px;
+    margin: 8px
 }
 
 
