--- a/_smallscreen.scss
+++ b/_smallscreen.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 700px) {
+
+    body{
+      background-size: 100% 100%;
+    }
     .page-wrapper {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -25,6 +29,7 @@
       grid-template-columns: unset;
       grid-column: unset;
       grid-row: 1;
+      margin:10px;
   }
 
     .sidebar {
@@ -52,6 +57,44 @@
       grid-column: unset;
       grid-row: 3/5;
     }
+
+    footer{
+      font-size: unset;
+      text-align: left;
+    }
+  
+  footer a {
+      padding: 0px;
+      font-size: 1.4em;
+      margin: 10px;
+      font-style: italic;
+  }
+
+  .page-wrapper>section>div,
+.page-wrapper>div>div,
+aside>div>div,
+footer {
+    background: rgba(128, 128, 128, 0.9);
+    border-radius: 15px;
+    margin: 10px;
+    padding: 15px;
+}
+
+ ul{
+  line-height: 1.3;
+  display: unset;
+  text-align: center;
+  font-style: italic;
+ }
+
+ h3{
+  text-align: center;
+ }
+
+ #zen-explanation {
+  margin-top: 10px;
+}
+
   //   .design-selection {
      
   // }
