--- a/_atoms.scss
+++ b/_atoms.scss
@@ -6,10 +6,19 @@
     font-size: $size;
 }
 
+#zen-preamble {
+    margin-bottom: 0px;
+}
+
+#zen-explanation {
+    margin-top: 0;
+}
+
 ul {
     list-style: none;
     display: inline-block;
     text-align: left;
+    padding: 0px;
 }
 
 nav {
@@ -36,7 +45,8 @@ h4 {
 }
 
 p {
-    @include set-font($fonts-body)
+    @include set-font($fonts-body);
+    line-height: 1.5;
 }
 
 body {
@@ -143,7 +153,7 @@ body {
 
 .page-wrapper {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 20px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
@@ -154,7 +164,7 @@ body {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(12, minmax(0, 1fr));
-    grid-template-rows: 45vh 55vh 200px;
+    grid-template-rows: 45vh 55vh auto;
     grid-row: 1;
     grid-column: 3 / 11;
 }
@@ -196,14 +206,17 @@ h3 {
     grid-column: 4/13;
     grid-row: 3;
     padding: 0px;
+    overflow: auto;
 }
 
 
 /*Main*/
 
 .main {
+    display: grid;
     grid-column: 5/11;
     grid-row: 2;
+    grid-gap: 10px;
 }
 
 .sidebar {
