--- a/_atoms.scss
+++ b/_atoms.scss
@@ -182,14 +182,17 @@ h1 {
     @include set-font($fonts-headline,
     3em,
     $accent2);
-    grid-column: 2/6;
+    grid-column: 1/6;
+    font-size: 5em;
+    margin: 0px;
 }
 
 h2 {
     @include set-font($fonts-headline,
     $size,
     $accent3);
-    grid-column: 10/13;
+    grid-column: 9/13;
+    margin: 0px;
 }
 
 .summary {
