--- a/_mobilescreen.scss
+++ b/_mobilescreen.scss
@@ -1,16 +1,16 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 400px) {
 
     body{
       background-size: 100% 100%;
     }
     .page-wrapper {
      display: grid;
-     grid-template-columns: 1fr 1fr 1fr 1fr;
+     grid-template-columns: 1fr;
      grid-template-rows: auto;;
     }
 
     .main{
-      grid-column: 2/5;
+      grid-column: 1;
       grid-row: unset;
     }
 
